<resources>
    <string name="app_name">ExchangeRateProject</string>
    <string name="select_currency">Select Currency</string>

    <string name="base">Base</string>
    <string name="exchange">Exchange</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>


    <string name="base_currency">Base Currency</string>
    <string name="currency_to_check">Currency to Check</string>
    <string name="since">Since</string>
    <string name="start">Start</string>

    <string name="last_01_month">1 month ago</string>
    <string name="last_03_month">3 months ago</string>
    <string name="last_06_month">half a year ago</string>
    <string name="last_12_month">1 year ago</string>
    <string name="last_36_month">3 year ago</string>
    <string name="last_60_month">5 years ago</string>
    <string name="max_duration">as early as possible</string>

    <string name="error_message">Failed to grab data.</string>

    <string name="currency_AUD">AUD</string>
    <string name="currency_BGN">BGN</string>
    <string name="currency_BRL">BRL</string>
    <string name="currency_CAD">CAD</string>
    <string name="currency_CHF">CHF</string>
    <string name="currency_CNY">CNY</string>
    <string name="currency_CZK">CZK</string>
    <string name="currency_DKK">DKK</string>
    <string name="currency_EUR">EUR</string>
    <string name="currency_GBP">GBP</string>
    <string name="currency_HKD">HKD</string>
    <string name="currency_HRK">HRK</string>
    <string name="currency_HUF">HUF</string>
    <string name="currency_IDR">IDR</string>
    <string name="currency_ILS">ILS</string>
    <string name="currency_INR">INR</string>
    <string name="currency_ISK">ISK</string>
    <string name="currency_JPY">JPY</string>
    <string name="currency_KRW">KRW</string>
    <string name="currency_MXN">MXN</string>
    <string name="currency_MYR">MYR</string>
    <string name="currency_NOK">NOK</string>
    <string name="currency_NZD">NZD</string>
    <string name="currency_RON">RON</string>
    <string name="currency_PHP">PHP</string>
    <string name="currency_PLN">PLN</string>
    <string name="currency_RUB">RUB</string>
    <string name="currency_SEK">SEK</string>
    <string name="currency_SGD">SGD</string>
    <string name="currency_THB">THB</string>
    <string name="currency_TRY">TRY</string>
    <string name="currency_USD">USD</string>
    <string name="currency_ZAR">ZAR</string>




    <string-array name="currencies">
        <item>AUD</item>
        <item>BGN</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CNY</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>HKD</item>
        <item>HRK</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>ISK</item>
        <item>JPY</item>
        <item>KRW</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>PHP</item>
        <item>PLN</item>
        <item>RON</item>
        <item>RUB</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>THB</item>
        <item>TRY</item>
        <item>USD</item>
        <item>ZAR</item>
    </string-array>

</resources>

